fixed languages on mobile

--- a/style.css
+++ b/style.css
@@ -180,7 +180,8 @@ header,
 .dark-theme .section__sub-title,
 .dark-theme .nav__link--anchor,
 .dark-theme .fa-circle-half-stroke,
-.dark-theme .header__para {
+.dark-theme .header__para,
+.dark-theme .language__name{
   color: white;
 }
 
@@ -514,6 +515,7 @@ nav {
   position: absolute;
   bottom: -10px;
   transition: all 300ms ease;
+  color: black;
 }
 
 .language__image {
@@ -521,9 +523,15 @@ nav {
   transform: scale(1);
   transition: transform 300ms ease;
 }
-
+.project__list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .project {
   margin: 40px 0;
+  width: 80%;
+
 }
 
 .section__title {
@@ -752,6 +760,17 @@ footer {
   .project__description--link{
     font-size: 40px;
   }
+  .project{
+    width: 100%;
+  }
+  .langauges{
+    flex-wrap: wrap;
+    height: auto;
+  }
+  .language{
+    width: 44%;
+    padding-bottom: 24px;
+  }
 }
 
 @media (max-height: 430px) {
@@ -793,9 +812,7 @@ footer {
   .project__description--link{
     font-size: 40px;
   }
-  .modal__langauges{
-    display: none;
-  }
+  
 }
 
 /* small phones */
